# trueno

./: .cargo-mutants.toml  .gitignore  .pmat-gates.toml  .pmat-metrics.toml  AVX512_ANALYSIS.md  AVX512_COMPUTE_BOUND_VALIDATION.md  BACKEND_PARITY_ANALYSIS.md  BENCHMARK_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  COVERAGE_POLICY.md  Cargo.toml  GOLDEN_TRACE_INTEGRATION_SUMMARY.md  HOOKS.md  Makefile  PERFORMANCE_EXPECTATIONS.md  PMAT-INTEGRATION.md  PMAT-WORKFLOW.md  PROGRESS.md  PR_SUMMARY.md  README.md  ROADMAP.md  SESSION_REGRESSION_CI.md  SESSION_SUMMARY.md  deep_context.md  deny.toml  json  lcov.info  pmat.toml  renacer.toml
.cargo/: config.toml
.config/: nextest.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  coverage.yml  deploy-docs.yml  golden-traces.yml  miri.yml  pmat-quality.yml  quality-metrics.yml
.performance-baselines/: README.md  baseline-current.txt  baseline-template.json
.pmat/: baseline.json  project.toml
benches/: async_gpu_ops.rs  eigen_ops.rs  gpu_ops.rs  matrix_ops.rs  vector_ops.rs
benchmarks/: .gitignore  AVX512_SIMD_RESULTS.md  BENCHMARK_PROGRESS.md  BENCHMARK_RESULTS.md  EXP_BENCHMARK_RESULTS.md  README.md  compare_results.py  matmul_comparison.py  pyproject.toml  python_comparison.py  requirements.txt  run_all.sh
book/: BOOK_CREATION_SUMMARY.md  README.md  book.toml
book/src/: SUMMARY.md  introduction.md
docs/: AVX2_BENCHMARKS.md  AVX512_SIMD_PERFORMANCE_ANALYSIS.md  BASHRS_GITHUB_ISSUE.md  BASHRS_XTASK_INTEGRATION.md  BENCHMARKS.md  BENCHMARK_RESULTS.md  CODE_QUALITY_LEARNINGS.md  ISSUE_26_INVESTIGATION.md  ISSUE_26_RESOLUTION.md  LOGARITHM_BENCHMARK_VALIDATION.md  LOGARITHM_SIMD_BENCHMARKS.md  MATRIX_PERFORMANCE.md  PERFORMANCE_GUIDE.md  PROFILING_GUIDE.md  SIGMOID_BENCHMARK_FIX.md  SIMD_ATTRIBUTE_CRISIS.md  SIMD_AUDIT_TARGET_FEATURE.md  SIMD_PERFORMANCE.md  SQRT_RECIP_FIX_SUMMARY.md  SQRT_RECIP_SIMD_BENCHMARKS.md  TRANSCENDENTAL_SIMD_BENCHMARKS.md  TRUENO_LAMBDA_ADVANTAGE.md  TRUENO_VS_NUMPY_SIMD.md  async-gpu-api-design.md  gpu-benchmark-report-2025-11-23.md  integration-report-golden-trace.md  performance-analysis.md  performance-optimization-v0.3.1-plan.md  performance-regression-ci.md  reproducibility.md  tanh-sigmoid-investigation.md  v0.3.0-completion-summary.md  v0.3.0-milestone-status.md  v0.3.0-release-readiness.md  v0.3.1-breakthrough-summary.md  v0.6.0-release-notes.md
examples/: README.md  activation_comparison.py  activation_functions.rs  backend_detection.rs  benchmark_matrix_suite.rs  benchmark_matvec.rs  benchmark_matvec_parallel.rs  benchmark_parallel.rs  dot_product_comparison.py  gpu_batch_demo.rs  gpu_monitor_demo.rs  hash_demo.rs  matrix_multiply_comparison.py  matrix_operations.rs  ml_similarity.rs  perf_tui.rs  performance_demo.rs  profile_vocab.rs  quickstart.rs  regression_test.rs  symmetric_eigen.rs  tiled_reduction_demo.rs  vocab_bench.rs
golden_traces/: ANALYSIS.md  activation_functions.json  activation_functions_summary.txt  backend_detection_source.json  backend_detection_summary.txt  matrix_operations.json  matrix_operations_summary.txt  ml_similarity.json  ml_similarity_summary.txt  performance_demo.json  performance_demo_summary.txt
proptest-regressions/: eigen.txt  matrix.txt  vector.txt
scripts/: analyze_traces.py  capture_golden_traces.sh  check-simd-target-feature.sh  check_regression.py  check_simd_attributes.py  compare_traces.py  install-hooks.sh  save_baseline.sh  validate_book_examples.sh
src/: chaos.rs  eigen.rs  error.rs  lib.rs  matrix.rs  monitor.rs  simulation.rs  vector.rs
tests/: backend_story.rs  chaos_tests.rs  falsification_tests.rs  golden_trace_validation.rs  integration_test.rs  pixel_fkr.rs  smoke_e2e.rs  wasm_optimization_tests.rs
trueno-explain/: Cargo.toml  README.md
trueno-explain/data/: vector_add.ptx
trueno-explain/examples/: analyze_realizar.rs  deep_bug_hunt.rs  ptx_inspector.rs
trueno-explain/src/: analyzer.rs  compare.rs  diff.rs  error.rs  lib.rs  main.rs  output.rs  simd.rs  tui.rs  wgpu.rs
trueno-explain/src/ptx/: bugs.rs  mod.rs  parser.rs
trueno-explain/tests/: integration_tests.rs  ptx_bug_hunting.rs
trueno-gpu/: Cargo.toml  Makefile  README.md  default_4165155629256446043_0_136284.profraw
trueno-gpu/benches/: ptx_gen.rs
trueno-gpu/demos/visual-test/: index.html
trueno-gpu/demos/visual-test/pkg/: package.json  trueno_gpu.d.ts  trueno_gpu.js  trueno_gpu_bg.wasm  trueno_gpu_bg.wasm.d.ts
trueno-gpu/docs/qa/: complete-cuda-runtime-specification-100pt-falsify.md
trueno-gpu/docs/specifications/: complete-cuda-runtime-specification.md  e2e-visual-test-probar.md  fix-stubbed-kernel-loops-enhanced-monitoring-pixel-level-gpu-stress-testing-probar.md
trueno-gpu/docs/specifications/reviews/: e2e-visual-test-probar-review.md
trueno-gpu/examples/: bench_kernel_gen.rs  bias_activation.rs  check_ntiles.rs  cuda_monitor.rs  dump_ptx.rs  dump_q4k_gemv.rs  flash_attention_cuda.rs  gemm_kernel.rs  gpu_pixels_render.rs  ptx_optimize.rs  ptx_quickstart.rs  q4k_gemm.rs  q5k_q6k_gemm.rs  register_allocation.rs  satd_kernels.rs  simple_attention_cuda.rs
trueno-gpu/fuzz/: Cargo.toml
trueno-gpu/fuzz/fuzz_targets/: fuzz_gemm_kernel.rs  fuzz_ptx_builder.rs
trueno-gpu/proptest-regressions/kernels/: bias_activation.txt  mod.txt
trueno-gpu/proptest-regressions/ptx/optimize/: barrier_safety.txt
trueno-gpu/src/: error.rs  lib.rs  monitor.rs  wasm.rs
trueno-gpu/src/backend/: mod.rs
trueno-gpu/src/driver/: context.rs  memory.rs  mod.rs  module.rs  stream.rs  sys.rs  types.rs
trueno-gpu/src/kernels/: attention.rs  bias_activation.rs  elementwise.rs  gemm.rs  gemv.rs  layernorm.rs  mod.rs  quantize.rs  softmax.rs
trueno-gpu/src/memory/: mod.rs  pool.rs
trueno-gpu/src/ptx/: builder.rs  emit.rs  instructions.rs  mod.rs  registers.rs  types.rs
trueno-gpu/src/ptx/optimize/: barrier_safety.rs  fma_fusion.rs  loop_split.rs  mod.rs  tile_validation.rs  tko.rs
trueno-gpu/src/testing/: gpu_renderer.rs  integration_tests.rs  mod.rs  stress.rs  tui.rs
trueno-gpu/tests/: gpu_pixels.rs  kernel_validation.rs  pixel_fkr.rs
xtask/: Cargo.toml
(+120 files in other folders)
