[workspace]
members = [".", "xtask"]
exclude = []

[package]
name = "trueno"
version = "0.4.0"
edition = "2021"
authors = ["Pragmatic AI Labs"]
license = "MIT"
description = "High-performance SIMD compute library with GPU support for matrix operations"
repository = "https://github.com/paiml/trueno"
readme = "README.md"
keywords = ["simd", "gpu", "wasm", "performance", "vectorization"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
thiserror = "2.0"
rayon = { version = "1.10", optional = true }
wgpu = { version = "22", optional = true }
pollster = { version = "0.3", optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }
futures-intrusive = { version = "0.5", optional = true }

[dev-dependencies]
proptest = "1.8"
criterion = "0.5"

[features]
default = []
parallel = ["rayon"]
gpu = ["wgpu", "pollster", "bytemuck", "futures-intrusive"]
# Chaos engineering features (from renacer v0.4.1)
chaos-basic = []
chaos-network = ["chaos-basic"]
chaos-byzantine = ["chaos-basic"]
chaos-full = ["chaos-network", "chaos-byzantine"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = true  # Enable debug symbols for profiling (flamegraph, perf)

[lib]
name = "trueno"
path = "src/lib.rs"

[[bench]]
name = "vector_ops"
harness = false

[[bench]]
name = "matrix_ops"
harness = false

[[bench]]
name = "gpu_ops"
harness = false
required-features = ["gpu"]
