[workspace]
members = [".", "xtask"]
exclude = []

# Workspace-level lints (PMAT best practices)
[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
missing_docs = "warn"
rust_2018_idioms = "warn"

[workspace.lints.clippy]
# Correctness (critical)
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# Performance
perf = { level = "warn", priority = -1 }

# Known Defects (v2.200.0 - Cloudflare outage 2025-11-18)
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
unreachable = "warn"

# Code quality
complexity = "warn"
style = "warn"
pedantic = "warn"

[package]
name = "trueno"
version = "0.7.0"
edition = "2021"
authors = ["Pragmatic AI Labs"]
license = "MIT"
description = "High-performance SIMD compute library with GPU support for matrix operations"
repository = "https://github.com/paiml/trueno"
readme = "README.md"
keywords = ["simd", "gpu", "wasm", "performance", "vectorization"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
thiserror = "2.0.17"
rayon = { version = "1.11", optional = true }
wgpu = { version = "27.0", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1.24", features = ["derive"], optional = true }
futures-intrusive = { version = "0.5", optional = true }

[dev-dependencies]
proptest = "1.9"
criterion = "0.7"
tokio = { version = "1", features = ["macros", "rt"] }
serde_json = "1.0"

[features]
default = []
parallel = ["rayon"]
gpu = ["wgpu", "pollster", "bytemuck", "futures-intrusive"]
# Chaos engineering features (from renacer v0.4.1)
chaos-basic = []
chaos-network = ["chaos-basic"]
chaos-byzantine = ["chaos-basic"]
chaos-full = ["chaos-network", "chaos-byzantine"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = true  # Enable debug symbols for profiling (flamegraph, perf)

[lib]
name = "trueno"
path = "src/lib.rs"

[[bench]]
name = "vector_ops"
harness = false

[[bench]]
name = "matrix_ops"
harness = false

[[bench]]
name = "gpu_ops"
harness = false
required-features = ["gpu"]
