[workspace]
members = [".", "xtask", "trueno-gpu", "trueno-explain"]
exclude = []

# Workspace-level lints (PMAT best practices)
[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
missing_docs = "warn"
rust_2018_idioms = "warn"

[workspace.lints.clippy]
# Correctness (critical)
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# Performance
perf = { level = "warn", priority = -1 }

# Known Defects (v2.200.0 - Cloudflare outage 2025-11-18)
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
unreachable = "warn"

# Code quality
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Development-phase allows (to be addressed incrementally)
uninlined_format_args = "allow"
useless_vec = "allow"
unnecessary_unwrap = "allow"

[package]
name = "trueno"
version = "0.8.7"
edition = "2021"
authors = ["Pragmatic AI Labs"]
license = "MIT"
description = "High-performance SIMD compute library with GPU support for matrix operations"
repository = "https://github.com/paiml/trueno"
readme = "README.md"
keywords = ["simd", "gpu", "wasm", "performance", "vectorization"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
thiserror = "2.0.17"
rayon = { version = "1.11", optional = true }
wgpu = { version = "27.0", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1.24", features = ["derive"], optional = true }
futures-intrusive = { version = "0.5", optional = true }
# WASM async support for GPU
wasm-bindgen-futures = { version = "0.4", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
# Native CUDA monitoring via trueno-gpu (TRUENO-SPEC-010)
trueno-gpu = { version = "0.3.0", path = "trueno-gpu", optional = true }
# Tracing/profiling support (renacer integration)
tracing = { version = "0.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Web-sys for WebGPU (auto-enabled when gpu-wasm feature is on)
web-sys = { version = "0.3", optional = true, features = ["console"] }

[dev-dependencies]
proptest = "1.9"
criterion = "0.7"
tokio = { version = "1", features = ["macros", "rt"] }
serde_json = "1.0"
nalgebra = "0.34"  # For eigendecomposition benchmark comparison
# Simulation testing framework (TRUENO-SPEC-012)
simular = "0.2.0"
regex = "1.11"  # For PTX/WGSL pattern validation in falsification tests

[features]
default = []
parallel = ["rayon"]
gpu = ["wgpu", "pollster", "bytemuck", "futures-intrusive"]
# GPU for WASM (WebGPU) - uses wasm-bindgen-futures instead of pollster
gpu-wasm = ["wgpu", "bytemuck", "futures-intrusive", "wasm-bindgen-futures", "wasm-bindgen", "web-sys"]
# Native CUDA monitoring via trueno-gpu (TRUENO-SPEC-010)
# Provides accurate device info (e.g., "NVIDIA GeForce RTX 4090") and real-time memory metrics
cuda-monitor = ["trueno-gpu/cuda"]
# Chaos engineering features (from renacer v0.4.1)
chaos-basic = []
chaos-network = ["chaos-basic"]
chaos-byzantine = ["chaos-basic"]
chaos-full = ["chaos-network", "chaos-byzantine"]
# Tracing/profiling (renacer integration)
tracing = ["dep:tracing"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = true  # Enable debug symbols for profiling (flamegraph, perf)

[lib]
name = "trueno"
path = "src/lib.rs"

[[bench]]
name = "vector_ops"
harness = false

[[bench]]
name = "matrix_ops"
harness = false

[[bench]]
name = "gpu_ops"
harness = false
required-features = ["gpu"]

[[bench]]
name = "async_gpu_ops"
harness = false
required-features = ["gpu"]

[[bench]]
name = "eigen_ops"
harness = false

[[example]]
name = "gpu_batch_demo"
required-features = ["gpu"]
