# Trueno Benchmark Dependencies
# Used by UV to manage Python benchmark environment
# Usage: uv run --with numpy --with torch python_comparison.py

[project]
name = "trueno-benchmarks"
version = "0.3.0"
description = "Benchmark comparison suite for Trueno vs NumPy vs PyTorch"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
]
