[package]
name = "trueno-gpu"
version = "0.2.2"
edition = "2021"
authors = ["Pragmatic AI Labs"]
license = "MIT"
description = "Pure Rust PTX generation for NVIDIA CUDA - no LLVM, no nvcc"
repository = "https://github.com/paiml/trueno"
readme = "README.md"
keywords = ["cuda", "ptx", "gpu", "simd", "nvidia"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
thiserror = "2.0"
# Dynamic library loading for libcuda.so/nvcuda.dll
# OWN THE STACK: We write our own CUDA FFI in driver/sys.rs (~400 lines)
# Citation: RustBelt [1] proves Rust's type system safely encapsulates unsafe FFI
libloading = { version = "0.8", optional = true }
# WASM support
wasm-bindgen = { version = "0.2", optional = true }
# Sovereign Stack - visual testing (optional to avoid version conflicts)
trueno-viz = { version = "0.1.4", optional = true }
# Simular for deterministic RNG and TUI monitoring (Sovereign Stack)
simular = { version = "0.2.0", optional = true }
# Renacer for profiling and anomaly detection (Sovereign Stack)
renacer = { version = "0.7.0", optional = true }
# TUI support via ratatui/crossterm (optional, for stress test monitor)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

[dev-dependencies]
proptest = "1.9"
criterion = "0.7"
simular = "0.2.0"
renacer = "0.7.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# GPU pixel testing with TUI visualization (Sovereign Stack)
jugar-probar = { version = "0.4.0", optional = true }

[features]
default = []
# Enable CUDA driver FFI for actual GPU execution (requires NVIDIA driver)
# Uses our own driver/sys.rs FFI layer, not external bindings
cuda = ["dep:libloading"]
# WASM visual testing
wasm = ["dep:wasm-bindgen"]
# Visual testing with trueno-viz (enables gpu_renderer)
viz = ["dep:trueno-viz"]
# Stress testing with randomized inputs (native only)
stress-test = ["dep:simular", "dep:renacer"]
# TUI monitoring mode for stress tests
tui-monitor = ["stress-test", "dep:ratatui", "dep:crossterm"]
# GPU pixel testing with probar TUI visualization
gpu-pixels = ["dep:jugar-probar", "dep:ratatui", "dep:crossterm"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# Inherit workspace lints
[lints]
workspace = true

[lib]
name = "trueno_gpu"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "ptx_gen"
harness = false

[[example]]
name = "ptx_quickstart"
path = "examples/ptx_quickstart.rs"

[[example]]
name = "gemm_kernel"
path = "examples/gemm_kernel.rs"

[[example]]
name = "cuda_monitor"
path = "examples/cuda_monitor.rs"
required-features = ["cuda"]

[[example]]
name = "simple_attention_cuda"
path = "examples/simple_attention_cuda.rs"
required-features = ["cuda"]

[[example]]
name = "flash_attention_cuda"
path = "examples/flash_attention_cuda.rs"
required-features = ["cuda"]

[[example]]
name = "satd_kernels"
path = "examples/satd_kernels.rs"

[[example]]
name = "gpu_pixels_render"
path = "examples/gpu_pixels_render.rs"
required-features = ["cuda"]
